// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements/FileInputCombo AutoUpload play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <section>
      <div class="flex flex-col gap-4">
        <label class="text-sm font-medium text-gray-700">
          Auto Upload Files
        </label>
        <div class="relative">
          <div class="flex flex-col items-center justify-center p-6 border-2 border-dashed rounded-lg transition-colors border-gray-300 hover:border-primary-300 cursor-pointer">
            <input type="file"
                   class="hidden"
                   accept
                   multiple
            >
            <div class="flex flex-col items-center gap-2">
              <svg width="20"
                   height="20"
                   viewbox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                   class="w-12 h-12"
              >
                <path opacity="0.5"
                      d="M6.28571 19C3.91878 19 2 17.1038 2 14.7647C2 12.4256 3.91878 10.5294 6.28571 10.5294C6.56983 10.5294 6.8475 10.5567 7.11616 10.6089M14.381 8.02721C14.9767 7.81911 15.6178 7.70588 16.2857 7.70588C16.9404 7.70588 17.5693 7.81468 18.1551 8.01498M7.11616 10.6089C6.88706 9.9978 6.7619 9.33687 6.7619 8.64706C6.7619 5.52827 9.32028 3 12.4762 3C15.4159 3 17.8371 5.19371 18.1551 8.01498M7.11616 10.6089C7.68059 10.7184 8.20528 10.9374 8.66667 11.2426M18.1551 8.01498C20.393 8.78024 22 10.8811 22 13.3529C22 16.0599 20.0726 18.3221 17.5 18.8722"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                >
                </path>
                <path d="M12 16V22M12 16L14 18M12 16L10 18"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
              </svg>
              <h3 class="text-lg font-medium text-gray-900">
                Files will upload automatically
              </h3>
              <span class="text-gray-400 font-sans text-[0.7rem] font-semibold uppercase">
                Or
              </span>
              <p class="mt-1 text-sm text-gray-500">
                Click to browse files
              </p>
              <button data-v-e3f15263
                      type="button"
                      class="btn text-xs sm:text-sm transition-all shadow-none rounded-lg normal-case border-solid"
              >
                <span data-v-e3f15263
                      class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
                >
                </span>
                <span data-v-e3f15263
                      class
                >
                  Browse
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div class="z-50">
        <div class="flex items-center justify-center"
             style="display: none;"
        >
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Elements/FileInputCombo CustomIcons play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <section>
      <div class="flex flex-col gap-4">
        <div class="mb-4 flex items-center gap-2">
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Select files"
               label="Select files"
          >
            <svg width="20"
                 height="20"
                 viewbox="0 0 24 24"
                 stroke="currentColor"
                 stroke-width="1.5"
                 fill="none"
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 class="w-5 h-5"
            >
              <line x1="12"
                    y1="5"
                    x2="12"
                    y2="19"
              >
              </line>
              <line x1="5"
                    y1="12"
                    x2="19"
                    y2="12"
              >
              </line>
            </svg>
          </div>
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Start Upload"
               label="Start Upload"
          >
            <svg width="16"
                 height="16"
                 viewbox="0 0 24 24"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
                 class="w-5 h-5"
            >
              <path d="M12 20V4M12 4L6 10M12 4L18 10"
                    stroke="currentColor"
                    stroke-width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
              >
              </path>
            </svg>
          </div>
        </div>
        <div class="relative">
          <div class="flex flex-col items-center justify-center p-6 border-2 border-dashed rounded-lg transition-colors border-gray-300 hover:border-primary-300 cursor-pointer">
            <input type="file"
                   class="hidden"
                   accept
                   multiple
            >
            <div class="flex flex-col items-center gap-2">
              <div class="IconUpload w-12 h-12">
              </div>
              <h3 class="text-lg font-medium text-gray-900">
                Drop files to upload
              </h3>
              <span class="text-gray-400 font-sans text-[0.7rem] font-semibold uppercase">
                Or
              </span>
              <p class="mt-1 text-sm text-gray-500">
                Click to browse files
              </p>
              <button data-v-e3f15263
                      type="button"
                      class="btn text-xs sm:text-sm transition-all shadow-none rounded-lg normal-case border-solid"
              >
                <span data-v-e3f15263
                      class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
                >
                </span>
                <span data-v-e3f15263
                      class
                >
                  Browse
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div class="z-50">
        <div class="flex items-center justify-center"
             style="display: none;"
        >
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Elements/FileInputCombo Default play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <section>
      <div class="flex flex-col gap-4">
        <div class="mb-4 flex items-center gap-2">
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Select files"
               label="Select files"
          >
            <svg width="20"
                 height="20"
                 viewbox="0 0 24 24"
                 stroke="currentColor"
                 stroke-width="1.5"
                 fill="none"
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 class="w-5 h-5"
            >
              <line x1="12"
                    y1="5"
                    x2="12"
                    y2="19"
              >
              </line>
              <line x1="5"
                    y1="12"
                    x2="19"
                    y2="12"
              >
              </line>
            </svg>
          </div>
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Start Upload"
               label="Start Upload"
          >
            <svg width="16"
                 height="16"
                 viewbox="0 0 24 24"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
                 class="w-5 h-5"
            >
              <path d="M12 20V4M12 4L6 10M12 4L18 10"
                    stroke="currentColor"
                    stroke-width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
              >
              </path>
            </svg>
          </div>
        </div>
        <div class="relative">
          <div class="flex flex-col items-center justify-center p-6 border-2 border-dashed rounded-lg transition-colors border-gray-300 hover:border-primary-300 cursor-pointer">
            <input type="file"
                   class="hidden"
                   accept
                   multiple
            >
            <div class="flex flex-col items-center gap-2">
              <svg width="20"
                   height="20"
                   viewbox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                   class="w-12 h-12"
              >
                <path opacity="0.5"
                      d="M6.28571 19C3.91878 19 2 17.1038 2 14.7647C2 12.4256 3.91878 10.5294 6.28571 10.5294C6.56983 10.5294 6.8475 10.5567 7.11616 10.6089M14.381 8.02721C14.9767 7.81911 15.6178 7.70588 16.2857 7.70588C16.9404 7.70588 17.5693 7.81468 18.1551 8.01498M7.11616 10.6089C6.88706 9.9978 6.7619 9.33687 6.7619 8.64706C6.7619 5.52827 9.32028 3 12.4762 3C15.4159 3 17.8371 5.19371 18.1551 8.01498M7.11616 10.6089C7.68059 10.7184 8.20528 10.9374 8.66667 11.2426M18.1551 8.01498C20.393 8.78024 22 10.8811 22 13.3529C22 16.0599 20.0726 18.3221 17.5 18.8722"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                >
                </path>
                <path d="M12 16V22M12 16L14 18M12 16L10 18"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
              </svg>
              <h3 class="text-lg font-medium text-gray-900">
                Drop files to upload
              </h3>
              <span class="text-gray-400 font-sans text-[0.7rem] font-semibold uppercase">
                Or
              </span>
              <p class="mt-1 text-sm text-gray-500">
                Click to browse files
              </p>
              <button data-v-e3f15263
                      type="button"
                      class="btn text-xs sm:text-sm transition-all shadow-none rounded-lg normal-case border-solid"
              >
                <span data-v-e3f15263
                      class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
                >
                </span>
                <span data-v-e3f15263
                      class
                >
                  Browse
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div class="z-50">
        <div class="flex items-center justify-center"
             style="display: none;"
        >
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Elements/FileInputCombo Disabled play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <section>
      <div class="flex flex-col gap-4">
        <label class="text-sm font-medium text-gray-700">
          Disabled Upload
        </label>
        <div class="mb-4 flex items-center gap-2">
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-gray-100 cursor-not-allowed bg-gray-100 cursor-not-allowed dark:text-[#d0d2d6] rounded-full"
               disabled="true"
               title="Select files"
               label="Select files"
          >
            <svg width="20"
                 height="20"
                 viewbox="0 0 24 24"
                 stroke="currentColor"
                 stroke-width="1.5"
                 fill="none"
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 class="w-5 h-5"
            >
              <line x1="12"
                    y1="5"
                    x2="12"
                    y2="19"
              >
              </line>
              <line x1="5"
                    y1="12"
                    x2="19"
                    y2="12"
              >
              </line>
            </svg>
          </div>
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-gray-100 cursor-not-allowed bg-gray-100 cursor-not-allowed dark:text-[#d0d2d6] rounded-full"
               disabled="true"
               title="Start Upload"
               label="Start Upload"
          >
            <svg width="16"
                 height="16"
                 viewbox="0 0 24 24"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
                 class="w-5 h-5"
            >
              <path d="M12 20V4M12 4L6 10M12 4L18 10"
                    stroke="currentColor"
                    stroke-width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
              >
              </path>
            </svg>
          </div>
        </div>
        <div class="relative">
          <div class="flex flex-col items-center justify-center p-6 border-2 border-dashed rounded-lg transition-colors border-gray-300 hover:border-primary-300 bg-gray-100 cursor-not-allowed opacity-60">
            <input type="file"
                   class="hidden"
                   accept
                   multiple
                   disabled
            >
            <div class="flex flex-col items-center gap-2">
              <svg width="20"
                   height="20"
                   viewbox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                   class="w-12 h-12"
              >
                <path opacity="0.5"
                      d="M6.28571 19C3.91878 19 2 17.1038 2 14.7647C2 12.4256 3.91878 10.5294 6.28571 10.5294C6.56983 10.5294 6.8475 10.5567 7.11616 10.6089M14.381 8.02721C14.9767 7.81911 15.6178 7.70588 16.2857 7.70588C16.9404 7.70588 17.5693 7.81468 18.1551 8.01498M7.11616 10.6089C6.88706 9.9978 6.7619 9.33687 6.7619 8.64706C6.7619 5.52827 9.32028 3 12.4762 3C15.4159 3 17.8371 5.19371 18.1551 8.01498M7.11616 10.6089C7.68059 10.7184 8.20528 10.9374 8.66667 11.2426M18.1551 8.01498C20.393 8.78024 22 10.8811 22 13.3529C22 16.0599 20.0726 18.3221 17.5 18.8722"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                >
                </path>
                <path d="M12 16V22M12 16L14 18M12 16L10 18"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
              </svg>
              <h3 class="text-lg font-medium text-gray-900">
                Upload disabled
              </h3>
              <span class="text-gray-400 font-sans text-[0.7rem] font-semibold uppercase">
                Or
              </span>
              <p class="mt-1 text-sm text-gray-500">
                You cannot upload files at this time
              </p>
              <button data-v-e3f15263
                      type="button"
                      class="btn text-xs sm:text-sm transition-all bg-gray-100 cursor-not-allowed shadow-none rounded-lg normal-case border-solid"
                      disabled
              >
                <span data-v-e3f15263
                      class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
                >
                </span>
                <span data-v-e3f15263
                      class
                >
                  Browse
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div class="z-50">
        <div class="flex items-center justify-center"
             style="display: none;"
        >
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Elements/FileInputCombo DocumentUploader play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <section>
      <div class="flex flex-col gap-4">
        <label class="text-sm font-medium text-gray-700">
          Upload Documents
        </label>
        <div class="mb-4 flex items-center gap-2">
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Select files"
               label="Select files"
          >
            <svg width="20"
                 height="20"
                 viewbox="0 0 24 24"
                 stroke="currentColor"
                 stroke-width="1.5"
                 fill="none"
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 class="w-5 h-5"
            >
              <line x1="12"
                    y1="5"
                    x2="12"
                    y2="19"
              >
              </line>
              <line x1="5"
                    y1="12"
                    x2="19"
                    y2="12"
              >
              </line>
            </svg>
          </div>
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Start Upload"
               label="Start Upload"
          >
            <svg width="16"
                 height="16"
                 viewbox="0 0 24 24"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
                 class="w-5 h-5"
            >
              <path d="M12 20V4M12 4L6 10M12 4L18 10"
                    stroke="currentColor"
                    stroke-width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
              >
              </path>
            </svg>
          </div>
        </div>
        <div class="relative">
          <div class="flex flex-col items-center justify-center p-6 border-2 border-dashed rounded-lg transition-colors border-gray-300 hover:border-primary-300 cursor-pointer">
            <input type="file"
                   class="hidden"
                   accept=".pdf,.doc,.docx,.txt,.rtf"
                   multiple
            >
            <div class="flex flex-col items-center gap-2">
              <div class="IconDocument w-12 h-12">
              </div>
              <h3 class="text-lg font-medium text-gray-900">
                Drop your documents here
              </h3>
              <span class="text-gray-400 font-sans text-[0.7rem] font-semibold uppercase">
                Or
              </span>
              <p class="mt-1 text-sm text-gray-500">
                PDF, Word, and text files only
              </p>
              <button data-v-e3f15263
                      type="button"
                      class="btn text-xs sm:text-sm transition-all shadow-none rounded-lg normal-case border-solid"
              >
                <span data-v-e3f15263
                      class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
                >
                </span>
                <span data-v-e3f15263
                      class
                >
                  Browse
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div class="z-50">
        <div class="flex items-center justify-center"
             style="display: none;"
        >
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Elements/FileInputCombo ImageUploader play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <section>
      <div class="flex flex-col gap-4">
        <label class="text-sm font-medium text-gray-700">
          Upload Images
        </label>
        <div class="mb-4 flex items-center gap-2">
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Select files"
               label="Select files"
          >
            <svg width="20"
                 height="20"
                 viewbox="0 0 24 24"
                 stroke="currentColor"
                 stroke-width="1.5"
                 fill="none"
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 class="w-5 h-5"
            >
              <line x1="12"
                    y1="5"
                    x2="12"
                    y2="19"
              >
              </line>
              <line x1="5"
                    y1="12"
                    x2="19"
                    y2="12"
              >
              </line>
            </svg>
          </div>
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Start Upload"
               label="Start Upload"
          >
            <svg width="16"
                 height="16"
                 viewbox="0 0 24 24"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
                 class="w-5 h-5"
            >
              <path d="M12 20V4M12 4L6 10M12 4L18 10"
                    stroke="currentColor"
                    stroke-width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
              >
              </path>
            </svg>
          </div>
        </div>
        <div class="relative">
          <div class="flex flex-col items-center justify-center p-6 border-2 border-dashed rounded-lg transition-colors border-gray-300 hover:border-primary-300 cursor-pointer">
            <input type="file"
                   class="hidden"
                   accept=".jpg,.jpeg,.png,.gif,.webp"
                   multiple
            >
            <div class="flex flex-col items-center gap-2">
              <div class="IconImage w-12 h-12">
              </div>
              <h3 class="text-lg font-medium text-gray-900">
                Drop your images here
              </h3>
              <span class="text-gray-400 font-sans text-[0.7rem] font-semibold uppercase">
                Or
              </span>
              <p class="mt-1 text-sm text-gray-500">
                JPG, PNG, GIF and WebP files only
              </p>
              <button data-v-e3f15263
                      type="button"
                      class="btn text-xs sm:text-sm transition-all shadow-none rounded-lg normal-case border-solid"
              >
                <span data-v-e3f15263
                      class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
                >
                </span>
                <span data-v-e3f15263
                      class
                >
                  Browse
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div class="z-50">
        <div class="flex items-center justify-center"
             style="display: none;"
        >
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Elements/FileInputCombo NoPreview play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <section>
      <div class="flex flex-col gap-4">
        <div class="mb-4 flex items-center gap-2">
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Select files"
               label="Select files"
          >
            <svg width="20"
                 height="20"
                 viewbox="0 0 24 24"
                 stroke="currentColor"
                 stroke-width="1.5"
                 fill="none"
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 class="w-5 h-5"
            >
              <line x1="12"
                    y1="5"
                    x2="12"
                    y2="19"
              >
              </line>
              <line x1="5"
                    y1="12"
                    x2="19"
                    y2="12"
              >
              </line>
            </svg>
          </div>
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Start Upload"
               label="Start Upload"
          >
            <svg width="16"
                 height="16"
                 viewbox="0 0 24 24"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
                 class="w-5 h-5"
            >
              <path d="M12 20V4M12 4L6 10M12 4L18 10"
                    stroke="currentColor"
                    stroke-width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
              >
              </path>
            </svg>
          </div>
        </div>
        <div class="relative">
          <div class="flex flex-col items-center justify-center p-6 border-2 border-dashed rounded-lg transition-colors border-gray-300 hover:border-primary-300 cursor-pointer">
            <input type="file"
                   class="hidden"
                   accept
                   multiple
            >
            <div class="flex flex-col items-center gap-2">
              <svg width="20"
                   height="20"
                   viewbox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                   class="w-12 h-12"
              >
                <path opacity="0.5"
                      d="M6.28571 19C3.91878 19 2 17.1038 2 14.7647C2 12.4256 3.91878 10.5294 6.28571 10.5294C6.56983 10.5294 6.8475 10.5567 7.11616 10.6089M14.381 8.02721C14.9767 7.81911 15.6178 7.70588 16.2857 7.70588C16.9404 7.70588 17.5693 7.81468 18.1551 8.01498M7.11616 10.6089C6.88706 9.9978 6.7619 9.33687 6.7619 8.64706C6.7619 5.52827 9.32028 3 12.4762 3C15.4159 3 17.8371 5.19371 18.1551 8.01498M7.11616 10.6089C7.68059 10.7184 8.20528 10.9374 8.66667 11.2426M18.1551 8.01498C20.393 8.78024 22 10.8811 22 13.3529C22 16.0599 20.0726 18.3221 17.5 18.8722"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                >
                </path>
                <path d="M12 16V22M12 16L14 18M12 16L10 18"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
              </svg>
              <h3 class="text-lg font-medium text-gray-900">
                Simple Upload
              </h3>
              <span class="text-gray-400 font-sans text-[0.7rem] font-semibold uppercase">
                Or
              </span>
              <p class="mt-1 text-sm text-gray-500">
                No file previews will be shown
              </p>
              <button data-v-e3f15263
                      type="button"
                      class="btn text-xs sm:text-sm transition-all shadow-none rounded-lg normal-case border-solid"
              >
                <span data-v-e3f15263
                      class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
                >
                </span>
                <span data-v-e3f15263
                      class
                >
                  Browse
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div class="z-50">
        <div class="flex items-center justify-center"
             style="display: none;"
        >
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Elements/FileInputCombo WithFileSizeLimit play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <section>
      <div class="flex flex-col gap-4">
        <label class="text-sm font-medium text-gray-700">
          Limited Upload Size
        </label>
        <div class="mb-4 flex items-center gap-2">
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Select files"
               label="Select files"
          >
            <svg width="20"
                 height="20"
                 viewbox="0 0 24 24"
                 stroke="currentColor"
                 stroke-width="1.5"
                 fill="none"
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 class="w-5 h-5"
            >
              <line x1="12"
                    y1="5"
                    x2="12"
                    y2="19"
              >
              </line>
              <line x1="5"
                    y1="12"
                    x2="19"
                    y2="12"
              >
              </line>
            </svg>
          </div>
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Start Upload"
               label="Start Upload"
          >
            <svg width="16"
                 height="16"
                 viewbox="0 0 24 24"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
                 class="w-5 h-5"
            >
              <path d="M12 20V4M12 4L6 10M12 4L18 10"
                    stroke="currentColor"
                    stroke-width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
              >
              </path>
            </svg>
          </div>
        </div>
        <div class="relative">
          <div class="flex flex-col items-center justify-center p-6 border-2 border-dashed rounded-lg transition-colors border-gray-300 hover:border-primary-300 cursor-pointer">
            <input type="file"
                   class="hidden"
                   accept
                   multiple
            >
            <div class="flex flex-col items-center gap-2">
              <svg width="20"
                   height="20"
                   viewbox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                   class="w-12 h-12"
              >
                <path opacity="0.5"
                      d="M6.28571 19C3.91878 19 2 17.1038 2 14.7647C2 12.4256 3.91878 10.5294 6.28571 10.5294C6.56983 10.5294 6.8475 10.5567 7.11616 10.6089M14.381 8.02721C14.9767 7.81911 15.6178 7.70588 16.2857 7.70588C16.9404 7.70588 17.5693 7.81468 18.1551 8.01498M7.11616 10.6089C6.88706 9.9978 6.7619 9.33687 6.7619 8.64706C6.7619 5.52827 9.32028 3 12.4762 3C15.4159 3 17.8371 5.19371 18.1551 8.01498M7.11616 10.6089C7.68059 10.7184 8.20528 10.9374 8.66667 11.2426M18.1551 8.01498C20.393 8.78024 22 10.8811 22 13.3529C22 16.0599 20.0726 18.3221 17.5 18.8722"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                >
                </path>
                <path d="M12 16V22M12 16L14 18M12 16L10 18"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
              </svg>
              <h3 class="text-lg font-medium text-gray-900">
                Drop files to upload
              </h3>
              <span class="text-gray-400 font-sans text-[0.7rem] font-semibold uppercase">
                Or
              </span>
              <p class="mt-1 text-sm text-gray-500">
                Maximum file size: 1MB
              </p>
              <button data-v-e3f15263
                      type="button"
                      class="btn text-xs sm:text-sm transition-all shadow-none rounded-lg normal-case border-solid"
              >
                <span data-v-e3f15263
                      class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
                >
                </span>
                <span data-v-e3f15263
                      class
                >
                  Browse
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div class="z-50">
        <div class="flex items-center justify-center"
             style="display: none;"
        >
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Elements/FileInputCombo WithLabel play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <section>
      <div class="flex flex-col gap-4">
        <label class="text-sm font-medium text-gray-700">
          Upload Documents
          <span class="text-red-500">
            *
          </span>
        </label>
        <div class="mb-4 flex items-center gap-2">
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Select files"
               label="Select files"
          >
            <svg width="20"
                 height="20"
                 viewbox="0 0 24 24"
                 stroke="currentColor"
                 stroke-width="1.5"
                 fill="none"
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 class="w-5 h-5"
            >
              <line x1="12"
                    y1="5"
                    x2="12"
                    y2="19"
              >
              </line>
              <line x1="5"
                    y1="12"
                    x2="19"
                    y2="12"
              >
              </line>
            </svg>
          </div>
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Start Upload"
               label="Start Upload"
          >
            <svg width="16"
                 height="16"
                 viewbox="0 0 24 24"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
                 class="w-5 h-5"
            >
              <path d="M12 20V4M12 4L6 10M12 4L18 10"
                    stroke="currentColor"
                    stroke-width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
              >
              </path>
            </svg>
          </div>
        </div>
        <div class="relative">
          <div class="flex flex-col items-center justify-center p-6 border-2 border-dashed rounded-lg transition-colors border-gray-300 hover:border-primary-300 cursor-pointer">
            <input type="file"
                   class="hidden"
                   accept
                   multiple
            >
            <div class="flex flex-col items-center gap-2">
              <svg width="20"
                   height="20"
                   viewbox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                   class="w-12 h-12"
              >
                <path opacity="0.5"
                      d="M6.28571 19C3.91878 19 2 17.1038 2 14.7647C2 12.4256 3.91878 10.5294 6.28571 10.5294C6.56983 10.5294 6.8475 10.5567 7.11616 10.6089M14.381 8.02721C14.9767 7.81911 15.6178 7.70588 16.2857 7.70588C16.9404 7.70588 17.5693 7.81468 18.1551 8.01498M7.11616 10.6089C6.88706 9.9978 6.7619 9.33687 6.7619 8.64706C6.7619 5.52827 9.32028 3 12.4762 3C15.4159 3 17.8371 5.19371 18.1551 8.01498M7.11616 10.6089C7.68059 10.7184 8.20528 10.9374 8.66667 11.2426M18.1551 8.01498C20.393 8.78024 22 10.8811 22 13.3529C22 16.0599 20.0726 18.3221 17.5 18.8722"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                >
                </path>
                <path d="M12 16V22M12 16L14 18M12 16L10 18"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
              </svg>
              <h3 class="text-lg font-medium text-gray-900">
                Drop files to upload
              </h3>
              <span class="text-gray-400 font-sans text-[0.7rem] font-semibold uppercase">
                Or
              </span>
              <p class="mt-1 text-sm text-gray-500">
                Click to browse files
              </p>
              <button data-v-e3f15263
                      type="button"
                      class="btn text-xs sm:text-sm transition-all shadow-none rounded-lg normal-case border-solid"
              >
                <span data-v-e3f15263
                      class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
                >
                </span>
                <span data-v-e3f15263
                      class
                >
                  Browse
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div class="z-50">
        <div class="flex items-center justify-center"
             style="display: none;"
        >
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Elements/FileInputCombo WithMaxFiles play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <section>
      <div class="flex flex-col gap-4">
        <label class="text-sm font-medium text-gray-700">
          Limited Number of Files
        </label>
        <div class="mb-4 flex items-center gap-2">
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Select files"
               label="Select files"
          >
            <svg width="20"
                 height="20"
                 viewbox="0 0 24 24"
                 stroke="currentColor"
                 stroke-width="1.5"
                 fill="none"
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 class="w-5 h-5"
            >
              <line x1="12"
                    y1="5"
                    x2="12"
                    y2="19"
              >
              </line>
              <line x1="5"
                    y1="12"
                    x2="19"
                    y2="12"
              >
              </line>
            </svg>
          </div>
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Start Upload"
               label="Start Upload"
          >
            <svg width="16"
                 height="16"
                 viewbox="0 0 24 24"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
                 class="w-5 h-5"
            >
              <path d="M12 20V4M12 4L6 10M12 4L18 10"
                    stroke="currentColor"
                    stroke-width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
              >
              </path>
            </svg>
          </div>
        </div>
        <div class="relative">
          <div class="flex flex-col items-center justify-center p-6 border-2 border-dashed rounded-lg transition-colors border-gray-300 hover:border-primary-300 cursor-pointer">
            <input type="file"
                   class="hidden"
                   accept
                   multiple
            >
            <div class="flex flex-col items-center gap-2">
              <svg width="20"
                   height="20"
                   viewbox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                   class="w-12 h-12"
              >
                <path opacity="0.5"
                      d="M6.28571 19C3.91878 19 2 17.1038 2 14.7647C2 12.4256 3.91878 10.5294 6.28571 10.5294C6.56983 10.5294 6.8475 10.5567 7.11616 10.6089M14.381 8.02721C14.9767 7.81911 15.6178 7.70588 16.2857 7.70588C16.9404 7.70588 17.5693 7.81468 18.1551 8.01498M7.11616 10.6089C6.88706 9.9978 6.7619 9.33687 6.7619 8.64706C6.7619 5.52827 9.32028 3 12.4762 3C15.4159 3 17.8371 5.19371 18.1551 8.01498M7.11616 10.6089C7.68059 10.7184 8.20528 10.9374 8.66667 11.2426M18.1551 8.01498C20.393 8.78024 22 10.8811 22 13.3529C22 16.0599 20.0726 18.3221 17.5 18.8722"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                >
                </path>
                <path d="M12 16V22M12 16L14 18M12 16L10 18"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
              </svg>
              <h3 class="text-lg font-medium text-gray-900">
                Drop files to upload
              </h3>
              <span class="text-gray-400 font-sans text-[0.7rem] font-semibold uppercase">
                Or
              </span>
              <p class="mt-1 text-sm text-gray-500">
                Maximum 2 files allowed
              </p>
              <button data-v-e3f15263
                      type="button"
                      class="btn text-xs sm:text-sm transition-all shadow-none rounded-lg normal-case border-solid"
              >
                <span data-v-e3f15263
                      class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
                >
                </span>
                <span data-v-e3f15263
                      class
                >
                  Browse
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div class="z-50">
        <div class="flex items-center justify-center"
             style="display: none;"
        >
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Elements/FileInputCombo WithToastNotifications play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <section>
      <div class="flex flex-col gap-4">
        <label class="text-sm font-medium text-gray-700">
          File Upload with Toast Notifications
        </label>
        <div class="mb-4 flex items-center gap-2">
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Select files"
               label="Select files"
          >
            <svg width="20"
                 height="20"
                 viewbox="0 0 24 24"
                 stroke="currentColor"
                 stroke-width="1.5"
                 fill="none"
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 class="w-5 h-5"
            >
              <line x1="12"
                    y1="5"
                    x2="12"
                    y2="19"
              >
              </line>
              <line x1="5"
                    y1="12"
                    x2="19"
                    y2="12"
              >
              </line>
            </svg>
          </div>
        </div>
        <div class="relative">
          <div class="flex flex-col items-center justify-center p-6 border-2 border-dashed rounded-lg transition-colors border-gray-300 hover:border-primary-300 cursor-pointer">
            <input type="file"
                   class="hidden"
                   accept
                   multiple
            >
            <div class="flex flex-col items-center gap-2">
              <svg width="20"
                   height="20"
                   viewbox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                   class="w-12 h-12"
              >
                <path opacity="0.5"
                      d="M6.28571 19C3.91878 19 2 17.1038 2 14.7647C2 12.4256 3.91878 10.5294 6.28571 10.5294C6.56983 10.5294 6.8475 10.5567 7.11616 10.6089M14.381 8.02721C14.9767 7.81911 15.6178 7.70588 16.2857 7.70588C16.9404 7.70588 17.5693 7.81468 18.1551 8.01498M7.11616 10.6089C6.88706 9.9978 6.7619 9.33687 6.7619 8.64706C6.7619 5.52827 9.32028 3 12.4762 3C15.4159 3 17.8371 5.19371 18.1551 8.01498M7.11616 10.6089C7.68059 10.7184 8.20528 10.9374 8.66667 11.2426M18.1551 8.01498C20.393 8.78024 22 10.8811 22 13.3529C22 16.0599 20.0726 18.3221 17.5 18.8722"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                >
                </path>
                <path d="M12 16V22M12 16L14 18M12 16L10 18"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
              </svg>
              <h3 class="text-lg font-medium text-gray-900">
                Upload files to see toast notifications
              </h3>
              <span class="text-gray-400 font-sans text-[0.7rem] font-semibold uppercase">
                Or
              </span>
              <p class="mt-1 text-sm text-gray-500">
                All component events will be displayed as toast notifications
              </p>
              <button data-v-e3f15263
                      type="button"
                      class="btn text-xs sm:text-sm transition-all shadow-none rounded-lg normal-case border-solid"
              >
                <span data-v-e3f15263
                      class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
                >
                </span>
                <span data-v-e3f15263
                      class
                >
                  Browse
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div class="z-50">
        <div class="flex items-center justify-center"
             style="display: none;"
        >
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Elements/FileInputCombo WithUploadError play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <section>
      <div class="flex flex-col gap-4">
        <label class="text-sm font-medium text-gray-700">
          Upload with Error Simulation
        </label>
        <div class="mb-4 flex items-center gap-2">
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Select files"
               label="Select files"
          >
            <svg width="20"
                 height="20"
                 viewbox="0 0 24 24"
                 stroke="currentColor"
                 stroke-width="1.5"
                 fill="none"
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 class="w-5 h-5"
            >
              <line x1="12"
                    y1="5"
                    x2="12"
                    y2="19"
              >
              </line>
              <line x1="5"
                    y1="12"
                    x2="19"
                    y2="12"
              >
              </line>
            </svg>
          </div>
        </div>
        <div class="relative">
          <div class="flex flex-col items-center justify-center p-6 border-2 border-dashed rounded-lg transition-colors border-gray-300 hover:border-primary-300 cursor-pointer">
            <input type="file"
                   class="hidden"
                   accept
                   multiple
            >
            <div class="flex flex-col items-center gap-2">
              <svg width="20"
                   height="20"
                   viewbox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                   class="w-12 h-12"
              >
                <path opacity="0.5"
                      d="M6.28571 19C3.91878 19 2 17.1038 2 14.7647C2 12.4256 3.91878 10.5294 6.28571 10.5294C6.56983 10.5294 6.8475 10.5567 7.11616 10.6089M14.381 8.02721C14.9767 7.81911 15.6178 7.70588 16.2857 7.70588C16.9404 7.70588 17.5693 7.81468 18.1551 8.01498M7.11616 10.6089C6.88706 9.9978 6.7619 9.33687 6.7619 8.64706C6.7619 5.52827 9.32028 3 12.4762 3C15.4159 3 17.8371 5.19371 18.1551 8.01498M7.11616 10.6089C7.68059 10.7184 8.20528 10.9374 8.66667 11.2426M18.1551 8.01498C20.393 8.78024 22 10.8811 22 13.3529C22 16.0599 20.0726 18.3221 17.5 18.8722"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                >
                </path>
                <path d="M12 16V22M12 16L14 18M12 16L10 18"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
              </svg>
              <h3 class="text-lg font-medium text-gray-900">
                Drop files to upload
              </h3>
              <span class="text-gray-400 font-sans text-[0.7rem] font-semibold uppercase">
                Or
              </span>
              <p class="mt-1 text-sm text-gray-500">
                Files will fail to upload after progress reaches 30%
              </p>
              <button data-v-e3f15263
                      type="button"
                      class="btn text-xs sm:text-sm transition-all shadow-none rounded-lg normal-case border-solid"
              >
                <span data-v-e3f15263
                      class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
                >
                </span>
                <span data-v-e3f15263
                      class
                >
                  Browse
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div class="z-50">
        <div class="flex items-center justify-center"
             style="display: none;"
        >
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Elements/FileInputCombo WithtoastErrors play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <section>
      <div class="flex flex-col gap-4">
        <label class="text-sm font-medium text-gray-700">
          Upload with Error Notifications
        </label>
        <div class="mb-4 flex items-center gap-2">
          <div class="p-2 overflow-hidden w-fit select-none transition-all flex items-center justify-center bg-white-light/40 hover:bg-white-light/90 hover:text-primary hover:cursor-pointer dark:bg-dark/40 dark:hover:bg-dark/60 dark:hover:text-primary hover:cursor-pointer dark:text-[#d0d2d6] rounded-full"
               disabled="false"
               title="Select files"
               label="Select files"
          >
            <svg width="20"
                 height="20"
                 viewbox="0 0 24 24"
                 stroke="currentColor"
                 stroke-width="1.5"
                 fill="none"
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 class="w-5 h-5"
            >
              <line x1="12"
                    y1="5"
                    x2="12"
                    y2="19"
              >
              </line>
              <line x1="5"
                    y1="12"
                    x2="19"
                    y2="12"
              >
              </line>
            </svg>
          </div>
        </div>
        <div class="relative">
          <div class="flex flex-col items-center justify-center p-6 border-2 border-dashed rounded-lg transition-colors border-gray-300 hover:border-primary-300 cursor-pointer">
            <input type="file"
                   class="hidden"
                   accept
                   multiple
            >
            <div class="flex flex-col items-center gap-2">
              <svg width="20"
                   height="20"
                   viewbox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                   class="w-12 h-12"
              >
                <path opacity="0.5"
                      d="M6.28571 19C3.91878 19 2 17.1038 2 14.7647C2 12.4256 3.91878 10.5294 6.28571 10.5294C6.56983 10.5294 6.8475 10.5567 7.11616 10.6089M14.381 8.02721C14.9767 7.81911 15.6178 7.70588 16.2857 7.70588C16.9404 7.70588 17.5693 7.81468 18.1551 8.01498M7.11616 10.6089C6.88706 9.9978 6.7619 9.33687 6.7619 8.64706C6.7619 5.52827 9.32028 3 12.4762 3C15.4159 3 17.8371 5.19371 18.1551 8.01498M7.11616 10.6089C7.68059 10.7184 8.20528 10.9374 8.66667 11.2426M18.1551 8.01498C20.393 8.78024 22 10.8811 22 13.3529C22 16.0599 20.0726 18.3221 17.5 18.8722"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                >
                </path>
                <path d="M12 16V22M12 16L14 18M12 16L10 18"
                      stroke="currentColor"
                      stroke-width="1.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                >
                </path>
              </svg>
              <h3 class="text-lg font-medium text-gray-900">
                Files will error at 30% upload
              </h3>
              <span class="text-gray-400 font-sans text-[0.7rem] font-semibold uppercase">
                Or
              </span>
              <p class="mt-1 text-sm text-gray-500">
                Demonstrates error toast notifications
              </p>
              <button data-v-e3f15263
                      type="button"
                      class="btn text-xs sm:text-sm transition-all shadow-none rounded-lg normal-case border-solid"
              >
                <span data-v-e3f15263
                      class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
                >
                </span>
                <span data-v-e3f15263
                      class
                >
                  Browse
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div class="z-50">
        <div class="flex items-center justify-center"
             style="display: none;"
        >
        </div>
      </div>
    </section>
  </div>
</div>
`;
